--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -40,3 +40,106 @@ ul {
   .flex-container li a{
     justify-content: center;
   }
+
+  .triangle{
+    width: 0;
+    height: 0;
+    border-top: 100px solid #51B55F;
+    border-right: 1520px solid transparent;
+  }
+  #bannersubject{
+    background-color: #49944C;
+    margin: 30px;
+  }
+  .box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #learnerparagraph{
+    font-size:2rem;
+    color:  #7C7E7F;
+  }
+  #empimg2{
+    clip-path: polygon(0% 0%, 100% 0%, 75% 100%, 0% 100%);
+  }
+  #stimg2{
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
+  }
+  #empimg{
+    border-radius: 8px;
+    margin: 10px;
+  }
+  #stimg{
+    border-radius: 8px;
+    margin: 10px;
+  }
+  .row{
+    margin-top: 20px;
+  }
+  .flex-container {
+    text-align: center;
+  }
+  #solutionbody{
+    text-align: center;
+    margin: 10px;
+    max-width: 1000px;
+  }
+  .flex-containeritems {
+    display: flex;
+    justify-content: center;
+  }
+  .logos{
+    margin: 50px;
+  }
+  .trianglefooter{
+    position: absolute;
+    border-top: 200px solid #51B55F;
+    border-left: 1520px solid transparent;
+  }
+  .trianglefooterleft{
+    position: absolute;
+    border-top: 200px solid #51B55F;
+    border-right: 1520px solid transparent;
+  }
+  .squarefooter{
+    position: absolute;
+    height: 200px;
+    width: 1520px;
+    background-color: #49944C;
+  }
+  #container {
+    position: relative;
+  }
+  .green-rectangle{
+    text-align: center;
+    position: absolute;
+    background-color:#49944C;
+    margin-top: 200px;
+    width: 1520px;
+    font-size: 1.5rem;
+  }
+  #footerinfo a{
+    color: black;
+    text-decoration: underline;
+  }
+  #footerinfo::first-line{
+    font-weight: bold;
+  }
+  .bckblue{
+    background-color: #40738d;
+  }
+/* [1] The container */
+.img-hover-zoom {
+  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+  transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+  transform: scale(1.1);
+}
