--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -10,6 +10,7 @@
     color: white;
     text-align: right;
     padding-right: 20px;
+    font-size: 2rem;
 }
 ul {
     list-style-type: none;
@@ -50,14 +51,20 @@ ul {
   #bannersubject{
     background-color: #49944C;
     margin: 30px;
+    font-size: 3rem;
   }
+
   .box{
     display: flex;
     align-items: center;
     justify-content: center;
   }
+  .menu a{
+    font-size: 2rem;
+    text-align: center;
+  }
   #learnerparagraph{
-    font-size:2rem;
+    font-size:3rem;
     color:  #7C7E7F;
   }
   #empimg2{
@@ -67,10 +74,12 @@ ul {
     clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
   }
   #empimg{
+    
     border-radius: 8px;
     margin: 10px;
   }
   #stimg{
+    
     border-radius: 8px;
     margin: 10px;
   }
@@ -83,7 +92,7 @@ ul {
   #solutionbody{
     text-align: center;
     margin: 10px;
-    max-width: 1000px;
+    font-size: 2rem;
   }
   .flex-containeritems {
     display: flex;
@@ -142,4 +151,141 @@ ul {
 /* [3] Finally, transforming the image when container gets hovered */
 .img-hover-zoom:hover img {
   transform: scale(1.1);
+}
+
+.ETISolution{
+  margin: 50px 20px 0px 0px;
+}
+
+.btnsuccess{
+  font-size: large;
+}
+/*Jesse*/
+footer {
+  min-width: 100%;
+  background-color: black;
+  margin-top: 6%;
+  overflow: hidden;
+}
+footer div.container {
+  max-width: 100%;
+  padding-bottom: 6rem;
+}
+footer div.container div.row {
+  margin-right: 0;
+  margin-left: 6%;
+  
+}
+footer h1.footmainheader {
+  color: white;
+  font-size: 6rem;
+  line-height: 1;
+  letter-spacing: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+}
+footer div.social {
+  display: flex;
+  height: 200px;
+  align-items: flex-end;
+  margin-left: 0;
+}
+footer .social img {
+  max-width: 67%;
+  margin: 16% 17%;
+}
+a img.social-img3 {
+  max-width: 70%;
+}
+hr {
+  width: 7%;
+  margin-left: 6%;
+  border-width: 3px !important;
+  background-color: white;
+}
+
+footer .social a {
+  background-color: white;
+  height: auto;
+  width: 100%;
+  border-radius: 68%;
+  margin-right: 7%;
+}
+footer .footerdescription {
+  font-size: 3rem;
+  color: white;
+  font-style: italic;
+}
+footer div.six:nth-of-type(2) {
+  color: white;
+  font-size: 2rem;
+  padding-left: 31%;
+}
+footer div.six hr {
+  margin-left: 0;
+}
+footer input.button {
+  background-color: white;
+  width: 28%;
+  height: 61px;
+  font-size: 1.5rem;
+}
+footer div.button-div {
+  margin-left: 0;
+}
+
+@media (max-width: 549px) {
+  footer h1.footmainheader {
+      font-size: 10rem;
+  }
+  .row ~hr {
+      position: relative;
+      bottom: 184px;
+      width: 23%;
+  }
+  footer div.six:nth-of-type(2) {
+      padding-left: 0;
+      flex-direction: row;
+  }
+  footer input.button {
+      background-color: white;
+      width: 28%;
+      height: 61px;
+      font-size: 2vw;
+      padding: 0px;
+  }
+}
+@media (min-width: 550px) and (max-width: 1289px) {
+  footer div.six:nth-of-type(2) {
+      padding-left: 18%;
+  }
+  footer div.social {
+      display: flex;
+      height: 476px;
+      align-items: flex-end;
+      margin-left: 0;
+      flex-direction: column;
+      margin-top: auto;
+      justify-content: center;
+  }
+  footer div.social a {
+      width: 80%;
+  }
+}
+#myBtn {
+  display: none; 
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px; 
+  z-index: 99; 
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 18px;
+  color: #007bff;
+}
+
+#myBtn:hover {
+  background-color: #007bff;
+  color: white;
 }
