--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -49,7 +49,7 @@ ul {
     border-right: 1520px solid transparent;
   }
   #bannersubject{
-    background-color: #49944C;
+    background-color: #71C7EC;
     margin: 30px;
     font-size: 3rem;
   }
