--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -1,36 +1,70 @@
-.logoimg{
-    width: 160px;
+/* --- all pages ---*/
+.col {  /* --- full width for top logoimg, topbar, nav, img --- */
+  padding-right: 0px;
+  padding-left: 0px;
+}
+.logoimg {  /* --- top left ETI logo --- */
+    width: 180px;
     height: 80px;
     margin: 5px;
     float: left;
+    padding-left: 20px;
 }
-.topbar{
-    margin: 0px;
+.topbar { /* top blue bar w/phone number ---*/
+    width: 100%;
+    margin-left: 0px;
     background-color: #40738d;
     color: white;
     text-align: right;
     padding-right: 20px;
-    font-size: 2rem;
 }
-ul {
+
+/* --- index page --- */
+#learnerparagraph { /* --- index  page ---*/
+  text-align: center;
+  font-size: 2rem;
+  color:  #7C7E7F;
+}
+.bckblue { /* --- index page --- */
+  background-color: #40738d;
+}
+.logos { /*--- logos for eti customers, index page --- */
+  margin: 5px; /*--- decreased margin from 50px to 20px --- */
+   /* --- removed from page and to stylesheet --- */
+}
+.logos .img-thumbnail {
+  height: 50px;
+  width: 50px;
+  border-radius: 0px;
+}
+.img-thumbnail {
+  border-radius: 0px;
+}
+.col-3 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/*ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: white;
-  }
+  }*/
   
-  li {
+  /*li {
     float: left;
   }
-  
+*/
   li a {
-    display: block;
     color: #40738d;
+    font-weight: bold;
+    /*display: block;
     text-align: center;
     padding: 16px;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.3rem;*/
   }
 
   .flex-container{
@@ -38,254 +72,126 @@ ul {
     justify-content: center;
     margin: 15px 0px;
   }
-  .flex-container li a{
+  /*.flex-container li a{
     justify-content: center;
+  }*/
+  /*------About ETI CSS-----*/
+  .room { /* --- margin for top img ---*/
+    margin-bottom: 20px;
   }
-
-  .triangle{
-    width: 0;
-    height: 0;
-    border-top: 100px solid #51B55F;
-    border-right: 1520px solid transparent;
-  }
-  #bannersubject{
-    background-color: #71C7EC;
-    margin: 30px;
-    font-size: 3rem;
-  }
-
-  .box{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .menu a{
-    font-size: 2rem;
-    text-align: center;
-  }
-  #learnerparagraph{
-    font-size:3rem;
-    color:  #7C7E7F;
-  }
-  #empimg2{
-    clip-path: polygon(0% 0%, 100% 0%, 75% 100%, 0% 100%);
-  }
-  #stimg2{
-    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 0% 100%);
-  }
-  #empimg{
-    
-    border-radius: 8px;
-    margin: 10px;
-  }
-  #stimg{
-    
-    border-radius: 8px;
-    margin: 10px;
-  }
-  .row{
+  .mission {  /* ---css for margin above rows --- */
     margin-top: 20px;
-  }
-  .flex-container {
-    text-align: center;
-  }
-  #solutionbody{
-    text-align: center;
-    margin: 10px;
-    font-size: 2rem;
-  }
-  .flex-containeritems {
-    display: flex;
-    justify-content: center;
-  }
-  .logos{
-    margin: 50px;
-  }
-  .trianglefooter{
-    position: absolute;
-    border-top: 200px solid #51B55F;
-    border-left: 1520px solid transparent;
-  }
-  .trianglefooterleft{
-    position: absolute;
-    border-top: 200px solid #51B55F;
-    border-right: 1520px solid transparent;
-  }
-  .squarefooter{
-    position: absolute;
-    height: 200px;
-    width: 1520px;
-    background-color: #49944C;
-  }
-  #container {
-    position: relative;
-  }
-  .green-rectangle{
-    text-align: center;
-    position: absolute;
-    background-color:#49944C;
-    margin-top: 200px;
-    width: 1520px;
-    font-size: 1.5rem;
-  }
-  #footerinfo a{
-    color: black;
-    text-decoration: underline;
-  }
-  #footerinfo::first-line{
-    font-weight: bold;
-  }
-  .bckblue{
-    background-color: #40738d;
-  }
-/* [1] The container */
-.img-hover-zoom {
-  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+.about-text { /* --- margin about col-md-8 ---*/
+  margin-top: 20px;
+}
+.title-left { /* --- col-md-4 --- */
+    text-align: left;
+    font-size: 26px;
+    font-weight: 400;
+}
+.why-card { /* --- margin for cards --- */
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.thumb-nail {
+  height: 200px;
+  width: auto;
+}
+/*----read more read less----*/
+#summary {
+  line-height: inherit;
+}
+#summary p.collapse:not(.show) {
+  height: 120px !important;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+}
+#summary p.collapsing {
+  min-height: 42px !important;
+}
+#summary a.collapsed:after  {
+  content: '+ Read More';
+}
+#summary a:not(.collapsed):after {
+  content: '- Read Less';
+}
+/* 2nd read more read less */
+#summary1 {
+  line-height: inherit;
+}
+#summary1 p.collapse:not(.show) {
+  height: 120px !important;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;  
+}
+#summary1 p.collapsing {
+  min-height: 42px !important;
+}
+#summary1 a.collapsed:after  {
+  content: '+ Read More';
+}
+#summary1 a:not(.collapsed):after {
+  content: '- Read Less';
 }
 
-/* [2] Transition property for smooth transformation of images */
-.img-hover-zoom img {
-  transition: transform .5s ease;
-}
 
-/* [3] Finally, transforming the image when container gets hovered */
-.img-hover-zoom:hover img {
-  transform: scale(1.1);
-}
-
-.ETISolution{
-  margin: 50px 20px 0px 0px;
-}
-
-.btnsuccess{
-  font-size: large;
-}
 /*Jesse*/
 footer {
-  min-width: 100%;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 10px;
   background-color: black;
-  margin-top: 6%;
-  overflow: hidden;
-}
-footer div.container {
-  max-width: 100%;
-  padding-bottom: 6rem;
-}
-footer div.container div.row {
-  margin-right: 0;
-  margin-left: 6%;
-  
-}
-footer h1.footmainheader {
   color: white;
-  font-size: 6rem;
-  line-height: 1;
-  letter-spacing: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
+ /* margin: 10px 0px;*/
+  /*padding-left: 50px;*/
+  /*overflow: hidden;*/
+  /*min-width: 100%;*/
 }
-footer div.social {
-  display: flex;
-  height: 200px;
+.social {
+  margin-top: 10px;
+  /*height: 200px;*/
+ /* display: flex;
   align-items: flex-end;
-  margin-left: 0;
+  margin-left: 0;*/
 }
-footer .social img {
-  max-width: 67%;
-  margin: 16% 17%;
+.future {
+  padding-top: 20px;
 }
-a img.social-img3 {
-  max-width: 70%;
+.talk {
+  padding-top: 40px;
 }
-hr {
-  width: 7%;
-  margin-left: 6%;
-  border-width: 3px !important;
-  background-color: white;
+.invest {
+  font-weight: bold;
+  font-size: 2.5rem;
 }
-
-footer .social a {
-  background-color: white;
-  height: auto;
-  width: 100%;
-  border-radius: 68%;
-  margin-right: 7%;
-}
-footer .footerdescription {
-  font-size: 3rem;
-  color: white;
+.footerdescription {
   font-style: italic;
 }
-footer div.six:nth-of-type(2) {
+.row location {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.location {
+  margin-bottom: 10px;
+}
+.location a {
   color: white;
-  font-size: 2rem;
-  padding-left: 31%;
 }
-footer div.six hr {
-  margin-left: 0;
+.map {
+  height: 50%;
+  width: 50%;
+  border: 0;
 }
-footer input.button {
+.award {
   background-color: white;
-  width: 28%;
-  height: 61px;
-  font-size: 1.5rem;
+  padding: 10px;
 }
-footer div.button-div {
-  margin-left: 0;
-}
-
-@media (max-width: 549px) {
-  footer h1.footmainheader {
-      font-size: 10rem;
-  }
-  .row ~hr {
-      position: relative;
-      bottom: 184px;
-      width: 23%;
-  }
-  footer div.six:nth-of-type(2) {
-      padding-left: 0;
-      flex-direction: row;
-  }
-  footer input.button {
-      background-color: white;
-      width: 28%;
-      height: 61px;
-      font-size: 2vw;
-      padding: 0px;
-  }
-}
-@media (min-width: 550px) and (max-width: 1289px) {
-  footer div.six:nth-of-type(2) {
-      padding-left: 18%;
-  }
-  footer div.social {
-      display: flex;
-      height: 476px;
-      align-items: flex-end;
-      margin-left: 0;
-      flex-direction: column;
-      margin-top: auto;
-      justify-content: center;
-  }
-  footer div.social a {
-      width: 80%;
-  }
-}
-#myBtn {
-  display: none; 
-  position: fixed; 
-  bottom: 20px; 
-  right: 30px; 
-  z-index: 99; 
-  outline: none;
-  cursor: pointer;
-  border-radius: 4px;
-  font-size: 18px;
-  color: #007bff;
-}
-
-#myBtn:hover {
-  background-color: #007bff;
-  color: white;
+.social .img-thumbnail {
+  height: 30px;
+  margin: 5px;
 }
