--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -195,100 +195,24 @@ footer {
   height: 30px;
   margin: 5px;
 }
-/*a img.social-img3 {
-  max-width: 70%;
-}*/
-/*footer div.container {
-  /*max-width: 100%;
-  padding-bottom: 6rem;
-}*/
-/*footer div.container div.row {
-  margin-right: 0;
-  margin-left: 6%;
-}*/
-/*hr {
-  width: 7%;
-  margin-left: 6%;
-  border-width: 3px !important;
-  background-color: white;
-}*/
-/*footer .social a {
-  background-color: white;
-  height: auto;
-  width: 100%;
-  border-radius: 68%;
-  margin-right: 7%;
-}*/
-/*footer div.six:nth-of-type(2) {
-  color: white;
-  font-size: 2rem;
-  padding-left: 31%;
-}*/
-/*footer div.six hr {
-  margin-left: 0;
+.videorow{
+  height: 100%;
 }
-footer input.button {
-  background-color: white;
-  width: 28%;
-  height: 61px;
-  font-size: 1.5rem;
-}
-footer div.button-div {
-  margin-left: 0;
-}*/
-
-/*@media (max-width: 549px) {
-  footer h1.footmainheader {
-      font-size: 10rem;
-  }
-  .row ~hr {
-      position: relative;
-      bottom: 184px;
-      width: 23%;
-  }
-  footer div.six:nth-of-type(2) {
-      padding-left: 0;
-      flex-direction: row;
-  }
-  footer input.button {
-      background-color: white;
-      width: 28%;
-      height: 61px;
-      font-size: 2vw;
-      padding: 0px;
-  }
-}
-@media (min-width: 550px) and (max-width: 1289px) {
-  footer div.six:nth-of-type(2) {
-      padding-left: 18%;
-  }
-  footer div.social {
-      display: flex;
-      height: 476px;
-      align-items: flex-end;
-      margin-left: 0;
-      flex-direction: column;
-      margin-top: auto;
-      justify-content: center;
-  }
-  footer div.social a {
-      width: 80%;
-  }
-}
-#myBtn {
-  display: none; 
-  position: fixed; 
-  bottom: 20px; 
-  right: 30px; 
-  z-index: 99; 
-  outline: none;
-  cursor: pointer;
-  border-radius: 4px;
-  font-size: 18px;
-  color: #007bff;
+/* [1] The container */
+.img-hover-zoom {
+  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
 }
 
-#myBtn:hover {
-  background-color: #007bff;
-  color: white;
-}*/
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+  transition: transform .5s ease;
+  margin-top: 20px;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+  transform: scale(1.1);
+    text-align: left;
+    font-size: 26px;
+    font-weight: 400;
+}
