--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -3,10 +3,10 @@
     padding-right: 0px;
     padding-left: 0px;
 }
-.logoimg {  /* --- top left ETI logo --- */
+#logoimg {  /* --- top left ETI logo --- */
     width: 180px;
     height: 80px;
-    margin: 5px;
+    margin: 10px;
     float: left;
     padding-left: 20px;
 }
@@ -18,6 +18,9 @@
     text-align: right;
     padding-right: 20px;
 }
+#video{
+  min-height: 350px;
+}
 
 #bannersubject{
   background-color: rgb(64, 115, 141, 0.6);
@@ -26,7 +29,7 @@
 }
 /* --- nav --- */
 nav {
-    margin: 30px 0px;
+    margin: 10px 0px;
 }
 li a {
     color: #40738d;
@@ -263,41 +266,6 @@ footer {
 
 /*Album Logos*/
 
-<<<<<<< Updated upstream
-#mission-1, #mission-2, #mission-3, 
-#partner-1, #partner-2, #partner-3, #partner-4, #partner-6, #partner-7, #partner-8, #partner-9, #partner-10 {
-    display: table-cell;
-    padding: 0px;
-    color: white;
-    vertical-align: middle;
-}
-#partner-5 {
-    display: table-cell;
-    padding: 0px;
-    color: black;
-    vertical-align: middle;
-}
-#partner-1, #partner-2, #partner-3, #partner-4, #partner-6, #partner-5, #partner-7, #partner-8, #partner-9, #partner-10 {
-    margin: 5px;
-}
-#mission-1, #partner-1 ,#partner-10 {
-  /* background-color:#96CC89; */
-}
-#mission-2, #partner-2 ,#partner-7 {
-  /* background-color:#0F2755; */
-}
-#mission-3, #partner-3, #partner-9 {
-  /* background-color:#71C7EC; */
-}
-#partner-4, #partner-8 {
-  /* background-color:#76A595; */
-} 
-#partner-5 {
-  /* background-color:#F5F5F5; */
-} 
-#partner-6 {
-  /* background-color:#7C7E7F; */
-} 
 
 .clientimg{
   margin: 15px;
