--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -3,6 +3,10 @@
     padding-right: 0px;
     padding-left: 0px;
 }
+div.col-lg-4.offset-lg-4, div.col-lg-4.offset-lg-8 {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 #logoimg {  /* --- top left ETI logo --- */
     width: 180px;
     height: 80px;
@@ -27,15 +31,39 @@
   margin: 30px;
   font-size: 3rem;
 }
-/* --- nav --- */
+/* --- navbar with logo --- */
 nav {
     margin: 10px 0px;
+}
+.navbar {
+    flex-wrap: nowrap;
+}
+.navbar-light .navbar-brand {
+    color: #40738d !important
+}
+.navbar-light {
+    font-weight: bold !important;
+}
+.navbar-light:hover, .navbar-nav .nav-link:hover, 
+.navbar-light .navbar-nav .nav-link {
+    color: #366177 !important;
+}
+.navbar-light:hover, .nav-link:hover {
+    font-size: 120% !important;
+}
+
+.bg-light {
+    background-color: white !important;
 }
 li a {
     color: #40738d;
     font-weight: bold;
 }
-
+/* --- h4 border all pages --- */
+h4.border-bottom.border-left {
+    padding-left: 5px;
+    padding-bottom: 5px;
+}
 /* --- index page --- */
 
 /*#bannersubject{
@@ -56,6 +84,8 @@ li a {
 .img-hover-zoom:hover img {
     transform: scale(1.1);
 }
+
+/* --- changed to class removed some css --- */
 #learnerparagraph { /* --- index  page ---*/
   margin: 50px 0px;
   text-align: center;
@@ -89,31 +119,12 @@ img.logos.img-thumbnail {
     padding-left: 5px;
     padding-right: 5px;
 }
-.nav a{
-  margin: 10px 0px;
-  font-size: 1.5rem;
-  font-weight: normal;
-}
-/*ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: white;
-  }*/
-  
-  /*li {
-    float: left;
-  }
-*/
+
+
   li a {
     color: #40738d;
     font-weight: bold;
-    /*display: block;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-    font-size: 1.3rem;*/
+    
   }
 
 .flex-container{
@@ -121,9 +132,7 @@ img.logos.img-thumbnail {
     justify-content: center;
     margin: 15px 0px;
 }
-/*.flex-container li a{
-    justify-content: center;
-}*/
+
 
  /*------About ETI CSS-----*/
 
@@ -133,22 +142,15 @@ img.logos.img-thumbnail {
 .mission {  /* ---css for margin above rows --- */
     margin-top: 20px;
 }
-.about-text { /* --- margin about col-md-8 ---*/
-    margin-top: 20px;
-}
-.title-left { /* --- col-md-4 --- */
-    text-align: left;
-    font-size: 26px;
-    font-weight: 400;
-}
-.why-card { /* --- margin for cards --- */
+
+/*.why-card { /* --- margin for cards --- 
     margin-top: 30px;
     margin-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-}
+}*/
 .card-body { /* --- three cards ---*/
-  padding: 20px 15px 20px 15px;
+  padding: 20px 5px;
   line-height: 1.2rem;
 }
 .card {
@@ -275,4 +277,8 @@ footer {
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
-
+/* Screen Reader - Usage as a mixin */
+.skip-navigation {
+  @include sr-only;
+  @include sr-only-focusable;
+}
