--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -51,18 +51,14 @@ nav {
 .navbar-light:hover, .nav-link:hover {
     font-size: 120% !important;
 }
-
 .bg-light {
     background-color: white !important;
 }
-li a {
-    color: #40738d;
-    font-weight: bold;
-}
+
 /* --- h4 border all pages --- */
 h4.border-bottom.border-left {
-    padding-left: 5px;
-    padding-bottom: 5px;
+    padding-left: 7px;
+    padding-bottom: 7px;
 }
 /* --- index page --- */
 
@@ -92,9 +88,29 @@ h4.border-bottom.border-left {
   font-size: 2rem;
   color:  #7C7E7F;
 }
-#ETISolution{
-  margin: 50px 0px;
+.changegray {
+    color:  #7C7E7F;
+    text-align: center;
 }
+.changeyellowwhite {
+    background-color: #ffd24d;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.changeteal {
+    color: #42dbcc;
+}
+.bgteal {
+    background-color: #42dbcc;
+    padding: 40px;
+}
+.bgyellow {
+    background-color: #ffd24d;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 .bckblue { /* --- index page --- */
     background-color: #40738d;
 }
@@ -119,14 +135,6 @@ img.logos.img-thumbnail {
     padding-left: 5px;
     padding-right: 5px;
 }
-
-
-  li a {
-    color: #40738d;
-    font-weight: bold;
-    
-  }
-
 .flex-container{
     display: flex;
     justify-content: center;
@@ -142,29 +150,22 @@ img.logos.img-thumbnail {
 .mission {  /* ---css for margin above rows --- */
     margin-top: 20px;
 }
-
-/*.why-card { /* --- margin for cards --- 
-    margin-top: 30px;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-}*/
 .card-body { /* --- three cards ---*/
   padding: 20px 5px;
   line-height: 1.2rem;
 }
 .card {
-  border: 1px solid rgb(193, 222, 238);
+  border: 3px solid rgb(193, 222, 238);
 }
 .thumb-nail {
     height: 200px;
     width: auto;
 }
 .border-bottom { /* --- hr title border --- */
-    border-bottom: 2px solid #9BC2DB !important;
+    border-bottom: 5px solid #9BC2DB !important;
 }
 .border-left {
-    border-left: 2px solid #71A9CC !important;
+    border-left: 5px solid #71A9CC !important;
 }
 
 /*----read more read less----*/
