--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -168,6 +168,21 @@ img.logos.img-thumbnail {
 
 
 /*Jesse*/
+
+/*students Page*/
+.nav-pills .nav-link.active {
+    color: black;
+    background-color: white;
+    border-radius: 0;
+    border-bottom: 1px solid #71A9CC;
+    width: fit-content;
+}
+
+/*For employers*/
+.contract {
+    margin-top: 20px;
+}
+
 footer {
     margin-left: 0px;
     margin-right: 0px;
