--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -26,7 +26,7 @@ div.col-lg-4.offset-lg-4, div.col-lg-4.offset-lg-8 {
   min-height: 350px;
 }
 
-#bannersubject{
+#bannersubject {
   background-color: rgb(64, 115, 141, 0.6);
   margin: 30px;
   font-size: 3rem;
@@ -39,20 +39,20 @@ nav {
     flex-wrap: nowrap;
 }
 .navbar-light .navbar-brand {
-    color: #40738d !important
+    color: black !important
 }
 .navbar-light {
     font-weight: bold !important;
 }
 .navbar-light:hover, .navbar-nav .nav-link:hover, 
 .navbar-light .navbar-nav .nav-link {
-    color: #366177 !important;
+    color: black !important;
 }
 .navbar-light:hover, .nav-link:hover {
     font-size: 120% !important;
 }
 .bg-light {
-    background-color: white !important;
+    background-color: lightseagreen !important;
 }
 
 /* --- h4 border all pages --- */
@@ -61,13 +61,6 @@ h4.border-bottom.border-left {
     padding-bottom: 7px;
 }
 /* --- index page --- */
-
-/*#bannersubject{
-    background-color: rgb(100, 132, 146);
-    margin: 30px;
-    font-size: 3rem;
-    border-radius: 10%;
-}*/
 /* [1] The container */
 .img-hover-zoom {
     overflow: hidden; /* [1.2] Hide the overflowing of child elements */
@@ -89,14 +82,21 @@ h4.border-bottom.border-left {
   color:  #7C7E7F;
 }
 .changegray {
-    color:  #7C7E7F;
+    color:  rgb(211, 219, 223);
     text-align: center;
 }
+.bggreen {
+    background-color: lightseagreen;
+}
+
 .changeyellowwhite {
     background-color: #ffd24d;
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+.chnageblue {
+    color: #71A9CC;
 }
 .changeteal {
     color: #42dbcc;
@@ -153,9 +153,10 @@ img.logos.img-thumbnail {
 .card-body { /* --- three cards ---*/
   padding: 20px 5px;
   line-height: 1.2rem;
+  min-height: 300px;
 }
 .card {
-  border: 3px solid rgb(193, 222, 238);
+  border: 2px solid #dadcdd;
 }
 .thumb-nail {
     height: 200px;
