--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -17,7 +17,7 @@ div.col-lg-4.offset-lg-4, div.col-lg-4.offset-lg-8 {
 .topbar { /* top blue bar w/phone number ---*/
     width: 100%;
     margin-left: 0px;
-    background-color: #40738d;
+    background-color: #29aca5;
     color: white;
     text-align: right;
     padding-right: 20px;
@@ -27,10 +27,11 @@ div.col-lg-4.offset-lg-4, div.col-lg-4.offset-lg-8 {
 }
 
 #bannersubject {
-  background-color: rgb(64, 115, 141, 0.6);
+  background-color: #40738d99;
   margin: 30px;
   font-size: 3rem;
 }
+
 /* --- navbar with logo --- */
 nav {
     margin: 10px 0px;
@@ -52,7 +53,7 @@ nav {
     font-size: 120% !important;
 }
 .bg-light {
-    background-color: lightseagreen !important;
+    background-color: #5eddd7 !important;
 }
 
 /* --- h4 border all pages --- */
@@ -81,14 +82,14 @@ h4.border-bottom.border-left {
   font-size: 2rem;
   color:  #7C7E7F;
 }
+/* --- font color bg-color, header --- */
 .changegray {
-    color:  rgb(211, 219, 223);
+    color:  #d3dbdf;
     text-align: center;
 }
 .bggreen {
-    background-color: lightseagreen;
+    background-color: #5eddd7;
 }
-
 .changeyellowwhite {
     background-color: #ffd24d;
     color: white;
@@ -100,6 +101,9 @@ h4.border-bottom.border-left {
 }
 .changeteal {
     color: #42dbcc;
+}
+h2.changeteal {
+    font-weight: bolder;
 }
 .bgteal {
     background-color: #42dbcc;
