--- a/Final_Project_Code/CSS/stylesheet.css
+++ b/Final_Project_Code/CSS/stylesheet.css
@@ -39,15 +39,19 @@ nav {
 .navbar {
     flex-wrap: nowrap;
 }
-.navbar-light .navbar-brand {
-    color: black !important
+.navbar-nav { /* nav font size */
+    font-size: 1.5rem;
+    
 }
-.navbar-light {
+.navbar-light .navbar-brand { /* nav font colot */
+    color: white !important;
+}
+.navbar-light { /* nav font weight */
     font-weight: bold !important;
 }
 .navbar-light:hover, .navbar-nav .nav-link:hover, 
 .navbar-light .navbar-nav .nav-link {
-    color: black !important;
+    color: white !important;
 }
 .navbar-light:hover, .nav-link:hover {
     font-size: 120% !important;
